--- a/PL/Views/Paciente/GetAll.cshtml
+++ b/PL/Views/Paciente/GetAll.cshtml
@@ -43,7 +43,7 @@
                             <li class="list-group-item text-center">Sexo: @paciente.Sexo</li>
                             <li class="list-group-item text-center">NSS: @paciente.NSS</li>
                             <li class="list-group-item text-center">Email:  @paciente.Email</li>
-                            <li class="list-group-item text-center">Password: @paciente.Password</li>
+                            <li class="list-group-item text-center hidden">Password: @paciente.Password</li>
                             <li class="list-group-item text-center">Telefono: @paciente.Telefono</li>
                             <li class="list-group-item text-center">Direccion: @paciente.Direccion</li>
                             <li class="list-group-item text-center">Fecha de nacimiento: @paciente.FechaNacimiento</li>
